# ocraft

./: .gitignore  README.md  new-py-pkg.sh  pyproject.toml
ocraft/cli/: app.py
ocraft/cli/crnn/: __init__.py  app.py  split.py  synth.py  train.py
ocraft/craft/models/: __init__.py  craft.py  double_conv.py  vgg16_bn_backbone.py
ocraft/crnn/: ctc_decoder.py
ocraft/crnn/data/: __init__.py  dataset.py  image_converter.py  image_synthesizer.py  text_converter.py
ocraft/crnn/models/: __init__.py  bidirectional_lstm.py  crnn.py
ocraft/crnn/train/: config.py  logging.py  trainer.py
